public/css/main.css
/* ... */
.peqline input:hover, input:focus, select:hover {
    background-color: hsl(var(--bck-hue), 50%, 70%)
}

.peqline input[type="text"] {
    margin-right: 10px;
    appearance: none;    
    border: none;
    border-radius: 3px;    
}

.peqline input[type="checkbox"] {    
    position: relative;
    appearance: none;
    width: 20px;    
    aspect-ratio: 1;    
    border-radius: 5px;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;    
}

.peqline input[type="checkbox"]:hover {        
    background-color: hsl(var(--bck-hue), 50%, 70%);    
}

.peqline input[type="checkbox"]::before {    
    content: " ";
    position: absolute;
    transform:scale(0);
    width: 50%;
    height: 50%;
    background-color: hsl(var(--bck-hue), 35%, 35%); 
    border-radius: 2px;
    transition: all 200ms linear;
}

input[type="checkbox"]:checked::before {
    transform: scale(1) rotate(90deg);
  }
    
.peqline select {
    width: 40px;
    text-align: center;
    appearance: none;
    border: none;
    border-radius: 3px;
    margin-right: 5px;
}
.peqline span {
    width: 4.5rem;
    margin-inline: 10px;
    user-select: none;
    text-align: end;
}

.peqline input[type="button"] {
    appearance: none;
    border: none;
    width: 20px;
    border-radius: 3px;
    margin-inline: 5px;
    font-weight: bold;
    text-align: center;
}

#freq {
    width: 8em ;
}

#gain {
    width: 4em ;
}

#qfact {
    width: 4em ;
}

.peqbutton {
    content: ' ';
    display: inline-block;    
    filter: invert(.5);
    width: 20px; 
    height: 20px;  
    padding-left: 20px;  
    cursor: pointer;
}

.peqbutton:hover {
    filter: invert(1);
}

.add {
    background: no-repeat center url("/img/icon/add.png");
}

.remove {
    background: no-repeat center url("/img/icon/remove.png");    
}


/************************************************* DIALOGUES *********************************************************************/
#importWindow {        
    color: white;            
    width: 40vw;
    height: fit-content;
    transform: translate(-50%, -50%); 
}

#importWindow .navigate {
    height: 15px;
}

#importText {        
    font-family: 'Courier New', Courier, monospace;       
    background-color: hsl(var(--bck-hue), var(--bck-sat),10%);
    border-radius: 5px;    
    margin: 15px;
    color:white;
    min-height: 300px;
    width: 35vw;
    padding: 5px;    
}

#importText:focus {
    appearance: none;
}

/***************************************************** SPECTRUM *******************************************************************/

#spectrum {
    display: grid;        
    grid-template-columns: repeat(60,auto);        
    height: 250px;    
    align-items:end;
}

.levelbar {        
    display: flex;        
    flex-direction: column;
    flex-wrap: wrap-reverse;
    align-items: center;
    justify-items: baseline;
    position: relative;
    width: 31px;
    height: 238px;
    margin-inline: 1px;
    font-size: 12px;
    background-color: hsl(160, 20%, 15%) ;        
    border-radius: 4px;        
    transform: rotate(180deg);
}

.levelbar::after{
    content: attr(freq);
    position: absolute;
    bottom: 0;    
    color:#444;
    background-color: none;
    font-size: 13px;
    transform: translateX(-50%);
    transform: rotate(180deg);
}

.levelbox {
    width: 100%;
    height: 5px;
    margin: 0;
    background-color: gold;
    opacity: 0;
    margin-block: 2px;
    border-radius: 4px;
    transition: all 100ms;
}

